syntax.output
State 23 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC

   24 StmtList: Stmt StmtList
   25         | %empty

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt
   32     | error SEMI

   33 DefList: Def DefList
   34        | %empty

   35 Def: Specifier DecList SEMI
   36    | error SEMI

   37 DecList: Dec
   38        | Dec COMMA DecList

   39 Dec: VarDec
   40    | VarDec ASSIGNOP Exp

   41 Exp: Exp ASSIGNOP Exp
   42    | Exp AND Exp
   43    | Exp OR Exp
   44    | Exp RELOP Exp
   45    | Exp PLUS Exp
   46    | Exp MINUS Exp
   47    | Exp STAR Exp
   48    | Exp DIV Exp
   49    | LP Exp RP
   50    | MINUS Exp
   51    | NOT Exp
   52    | ID LP Args RP
   53    | ID LP RP
   54    | Exp LB Exp RB
   55    | Exp DOT ID
   56    | ID
   57    | INT
   58    | FLOAT

   59 Args: Exp COMMA Args
   60     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 32 36
INT (258) 17 57
FLOAT (259) 58
AND (260) 42
ASSIGNOP (261) 40 41
COMMA (262) 8 20 38 59
DIV (263) 48
DOT (264) 55
ELSE (265) 30
ID (266) 13 15 16 18 19 52 53 55 56
IF (267) 29 30
LP (268) 18 19 29 30 31 49 52 53
RP (269) 18 19 29 30 31 49 52 53
LB (270) 17 54
RB (271) 17 54
LC (272) 11 23
RC (273) 11 23
MINUS (274) 46 50
NOT (275) 51
OR (276) 43
PLUS (277) 45
RELOP (278) 44
SEMI (279) 4 5 26 28 32 35 36
RETURN (280) 28
STAR (281) 47
STRUCT (282) 11 12
TYPE (283) 9
WHILE (284) 31
LOWER_THAN_ELSE (285)
UMINUS (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6, on right: 2
ExtDecList (36)
    on left: 7 8, on right: 4 8
Specifier (37)
    on left: 9 10, on right: 4 5 6 22 35
StructSpecifier (38)
    on left: 11 12, on right: 10
OptTag (39)
    on left: 13 14, on right: 11
Tag (40)
    on left: 15, on right: 12
VarDec (41)
    on left: 16 17, on right: 7 8 17 22 39 40
FunDec (42)
    on left: 18 19, on right: 6
VarList (43)
    on left: 20 21, on right: 18 20
ParamDec (44)
    on left: 22, on right: 20 21
CompSt (45)
    on left: 23, on right: 6 27
StmtList (46)
    on left: 24 25, on right: 23 24
Stmt (47)
    on left: 26 27 28 29 30 31 32, on right: 24 29 30 31
DefList (48)
    on left: 33 34, on right: 11 23 33
Def (49)
    on left: 35 36, on right: 33
DecList (50)
    on left: 37 38, on right: 35 38
Dec (51)
    on left: 39 40, on right: 37 38
Exp (52)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58,
    on right: 26 28 29 30 31 40 41 42 43 44 45 46 47 48 49 50 51 54
    55 59 60
Args (53)
    on left: 59 60, on right: 52 59


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 2

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


State 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 25
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    RC  reduce using rule 34 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    RP      shift, and go to state 29
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 33

    ExtDecList  go to state 34
    VarDec      go to state 16


State 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 35


State 23

   23 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 25
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    error   [reduce using rule 34 (DefList)]
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    RETURN  reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 36
    Def              go to state 28


State 24

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 25

   36 Def: error . SEMI

    SEMI  shift, and go to state 37


State 26

   35 Def: Specifier . DecList SEMI

    ID  shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 27

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 41


State 28

   33 DefList: Def . DefList

    error   shift, and go to state 25
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    error   [reduce using rule 34 (DefList)]
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    RETURN  reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 28


State 29

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 30

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  go to state 43


State 31

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 44


State 32

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 45

    $default  reduce using rule 21 (VarList)


State 33

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 34

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 35

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 46


State 36

   23 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    IF      shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 23
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 25 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 58
    Stmt      go to state 59
    Exp       go to state 60


State 37

   36 Def: error SEMI .

    $default  reduce using rule 36 (Def)


State 38

   17 VarDec: VarDec . LB INT RB
   39 Dec: VarDec .
   40    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 61
    LB        shift, and go to state 22

    $default  reduce using rule 39 (Dec)


State 39

   35 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 62


State 40

   37 DecList: Dec .
   38        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 37 (DecList)


State 41

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 42

   33 DefList: Def DefList .

    $default  reduce using rule 33 (DefList)


State 43

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


State 44

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 45

   20 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 64
    ParamDec         go to state 32


State 46

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 47

   32 Stmt: error . SEMI

    SEMI  shift, and go to state 65


State 48

   57 Exp: INT .

    $default  reduce using rule 57 (Exp)


State 49

   58 Exp: FLOAT .

    $default  reduce using rule 58 (Exp)


State 50

   52 Exp: ID . LP Args RP
   53    | ID . LP RP
   56    | ID .

    LP  shift, and go to state 66

    $default  reduce using rule 56 (Exp)


State 51

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 67


State 52

   49 Exp: LP . Exp RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 68


State 53

   50 Exp: MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 69


State 54

   51 Exp: NOT . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 70


State 55

   28 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 71


State 56

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 72


State 57

   27 Stmt: CompSt .

    $default  reduce using rule 27 (Stmt)


State 58

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 73


State 59

   24 StmtList: Stmt . StmtList

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    IF      shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 23
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 25 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 74
    Stmt      go to state 59
    Exp       go to state 60


State 60

   26 Stmt: Exp . SEMI
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID

    AND       shift, and go to state 75
    ASSIGNOP  shift, and go to state 76
    DIV       shift, and go to state 77
    DOT       shift, and go to state 78
    LB        shift, and go to state 79
    MINUS     shift, and go to state 80
    OR        shift, and go to state 81
    PLUS      shift, and go to state 82
    RELOP     shift, and go to state 83
    SEMI      shift, and go to state 84
    STAR      shift, and go to state 85


State 61

   40 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 86


State 62

   35 Def: Specifier DecList SEMI .

    $default  reduce using rule 35 (Def)


State 63

   38 DecList: Dec COMMA . DecList

    ID  shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 87
    Dec      go to state 40


State 64

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 65

   32 Stmt: error SEMI .

    $default  reduce using rule 32 (Stmt)


State 66

   52 Exp: ID LP . Args RP
   53    | ID LP . RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    RP     shift, and go to state 88
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp   go to state 89
    Args  go to state 90


State 67

   29 Stmt: IF LP . Exp RP Stmt
   30     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 91


State 68

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | LP Exp . RP
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID

    AND       shift, and go to state 75
    ASSIGNOP  shift, and go to state 76
    DIV       shift, and go to state 77
    DOT       shift, and go to state 78
    RP        shift, and go to state 92
    LB        shift, and go to state 79
    MINUS     shift, and go to state 80
    OR        shift, and go to state 81
    PLUS      shift, and go to state 82
    RELOP     shift, and go to state 83
    STAR      shift, and go to state 85


State 69

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   50    | MINUS Exp .
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID

    DOT  shift, and go to state 78
    LB   shift, and go to state 79

    $default  reduce using rule 50 (Exp)


State 70

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   51    | NOT Exp .
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID

    DOT  shift, and go to state 78
    LB   shift, and go to state 79

    $default  reduce using rule 51 (Exp)


State 71

   28 Stmt: RETURN Exp . SEMI
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . DOT ID

    AND       shift, and go to state 75
    ASSIGNOP  shift, and go to state 76
    DIV       shift, and go to state 77
    DOT       shift, and go to state 78
    LB        shift, and go to state 79
    MINUS     shift, and go to state 80
    OR        shift, and go to state 81
    PLUS      shift, and go to state 82
    RELOP     shift, and go to state 83
    SEMI      shift, and go to state 93
    STAR      shift, and go to state 85


State 72

   31 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 94


State 73

   23 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 23 (CompSt)


State 74

   24 StmtList: Stmt StmtList .

    $default  reduce using rule 24 (StmtList)


State 75

   42 Exp: Exp AND . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 95


State 76

   41 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 96


State 77

   48 Exp: Exp DIV . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 97


State 78

   55 Exp: Exp DOT . ID

    ID  shift, and go to state 98


State 79

   54 Exp: Exp LB . Exp RB

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 99


State 80

   46 Exp: Exp MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 100


State 81

   43 Exp: Exp OR . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 101


State 82

   45 Exp: Exp PLUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 102


State 83

   44 Exp: Exp RELOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 103


State 84

   26 Stmt: Exp SEMI .

    $default  reduce using rule 26 (Stmt)


State 85

   47 Exp: Exp STAR . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    LP     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54

    Exp  go to state 104


State 86
